			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2669 2004/09/30 22:23:05 jinmei Exp $

<200410>
2004-10-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6_rmx.c (in6_clsroute):
	* freebsd4/sys/netinet/in_rmx.c (in_clsroute):
	avoided duplicate free (and system crash) when
	net.inet[6].ip[6].rtexpire is set to 0.

<200409>
2004-09-29  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/net,netinet,netinet6: removed a "Bad malloc flag" warning
	on freebsd5.

2004-09-07  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: provided a new command "dhcp6ctl", deprecating
	dhcp6sctl.  This new command controls the client as well as the
	server.  For the client, the "start" and "stop" (which can specify
	a particular interface) commands are available.

2004-09-04  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: added the ability of dhcp6c to work on multiple
	interfaces simultaneously.

<200408>
Thu Aug 12 12:54:25 JST 2004	keiichi@iij.ad.jp
	* kame/sys/netinet6/nd6.c,in6_src.c
	made it possible to specify the address of the other side of
	a p2p interface as nexthop when sending a packet with
	the NEXTHOP pktoption.

2004-08-11  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/ndp/ndp.c (ifinfo): supported the "disabled" ndp flag
	to view or modify the status of whether IPv6 operation is disabled
	on the interface. (see also the next log entry)

2004-08-11  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6_nbr.c (nd6_dad_duplicated):
	* kame/sys/netinet6/ip6_input.c (ip6intr):
	* kame/sys/netinet6/nd6.c (nd6_output):
	disabled IPv6 operation if DAD fails for an address whose
	interface identifier is based on an EUI-64 ID which is supposed to
	be unique (a clarification in rfc2462bis).

2004-08-11  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/freebsd5/sbin/ifconfig/ifconfig.c: stopped unnecessary kernel
	module loading

2004-08-11  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>