@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2669 2004/09/30 22:23:05 jinmei Exp $
+$KAME: CHANGELOG,v 1.2670 2004/10/05 01:57:56 suz Exp $
 
 <200410>
+2004-10-05  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
+	* freebsd5/sys/dev/syscons/syscons.c: FreeBSD Security Advisory:
+	  FreeBSD-SA-04:15.syscons 
+
 2004-10-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
 	* kame/sys/netinet6/in6_rmx.c (in6_clsroute):
 	* freebsd4/sys/netinet/in_rmx.c (in_clsroute):
